fix: translations for tax templates

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -333,7 +333,7 @@ Add cards or custom sections on homepage,Ajouter des cartes ou des sections pers
 Add items in the Item Locations table,Ajoutez des articles dans la table de localisation d'articles,
 Add more items or open full form,Ajouter plus d'articles ou ouvrir le formulaire complet,
 Add notes,Ajouter une note,
-Add or Deduct,Ajouter ou Déduire,
+Add or Deduct,Ajouter ou déduire,
 Add the rest of your organization as your users. You can also add invite Customers to your portal by adding them from Contacts,Ajouter le reste de votre organisation en tant qu'utilisateurs. Vous pouvez aussi inviter des Clients sur votre portail en les ajoutant depuis les Contacts,
 Add this card,Ajouter cette carte,
 Add to Cart,Ajouter au Panier,
@@ -1553,7 +1553,7 @@ Connect your Exotel Account to ERPNext and track call logs,Connectez votre compt
 Connect your bank accounts to dokos,Connectez votre banque avec dokos,
 Connected to QuickBooks,Connecté à QuickBooks,
 Connecting to QuickBooks,Connexion à QuickBooks,
-Consider Tax or Charge for,Tenir Compte de la Taxe et des Frais pour,
+Consider Tax or Charge for,Tenir compte des taxes et frais pour,
 Consider Unmarked Attendance As,Considérer les présences non cochées comme,
 Consolidated Financial Statement,Comptes consolidés,
 Consultant ID,ID du consultant,
@@ -1723,7 +1723,7 @@ Create Sales Orders to help you plan your work and deliver on-time,Créez des co
 Create Sample Retention Stock Entry,Créer une écriture de conservation d'échantillon,
 Create Separate Payment Entry Against Benefit Claim,Créer une écriture de paiement distincte pour chaque demande d'avantages sociaux,
 Create Supplier Quotation,Créer un devis fournisseur,
-Create Tax Template,Créer un modèle de taxe,
+Create Tax Template,Créer un modèle de taxes,
 Create Timesheet,Créer une feuille de temps,
 Create User Permission,Créer une autorisation utilisateur,
 Create User,Créer un Utilisateur,
@@ -2086,7 +2086,7 @@ Default Stock UOM,Unité de mesure par Défaut des Articles,
 Default Supplier Group,Groupe de fournisseurs par défaut,
 Default Supplier,Fournisseur par Défaut,
 Default Target Warehouse,Entrepôt Cible par Défaut,
-Default Tax Template,Modèle de Taxes par Défaut,
+Default Tax Template,Modèle de taxes par défaut,
 Default Tax Withholding Config,Configuration de taxe retenue à la source par défaut,
 Default Territory,Région par défaut,
 Default UOM,Unité de mesure par défaut,
@@ -2918,7 +2918,7 @@ Forum Posts,Messages du forum,
 Forum URL,URL du forum,
 Free Item,Article gratuit,
 Free item code is not selected,Le code de l'article gratuit n'est pas sélectionné,
-Free item not set in the pricing rule {0},L'article gratuit n'est pas défini dans la règle de tarification {0},
+Free item not set in the pricing rule {0},L'article gratuit n'est pas défini dans la règle de prix {0},
 Freeze Stock Entries,Geler les Entrées de Stocks,
 Freeze Stocks Older Than [Days],Geler les Articles plus Anciens que [Jours],
 Freight and Forwarding Account,Compte de fret et d'expédition,
@@ -3342,7 +3342,7 @@ If more than one package of the same type (for print),Si plus d'un colis du mêm
 "If multiple Pricing Rules continue to prevail, users are asked to set Priority manually to resolve conflict.","Si plusieurs règles de tarification continuent de prévaloir, les utilisateurs sont invités à définir manuellement la priorité pour résoudre les conflits.",
 "If not checked, the list will have to be added to each Department where it has to be applied.","Si décochée, la liste devra être ajoutée à chaque département où elle doit être appliquée.",
 "If not, you can Cancel / Submit this entry ","Sinon, vous pouvez annuler/valider cette écriture",
-"If selected Pricing Rule is made for 'Rate', it will overwrite Price List. Pricing Rule rate is the final rate, so no further discount should be applied. Hence, in transactions like Sales Order, Purchase Order etc, it will be fetched in 'Rate' field, rather than 'Price List Rate' field.","Si la règle de tarification sélectionnée défini un 'Prix Unitaire', celui-ci écrase celui de la liste de prix. Le prix unitaire de la règle de tarification est le prix unitaire final, donc aucune autre réduction supplémentaire ne doit lui être appliquée. Par conséquent, dans les transactions telles que les commandes client, les commandes fournisseur, etc., il sera récupéré dans le champ 'Prix unitaire', plutôt que dans le champ 'Tarif de la liste de prix'.",
+"If selected Pricing Rule is made for 'Rate', it will overwrite Price List. Pricing Rule rate is the final rate, so no further discount should be applied. Hence, in transactions like Sales Order, Purchase Order etc, it will be fetched in 'Rate' field, rather than 'Price List Rate' field.","Si la règle de prix sélectionnée défini un 'Prix Unitaire', celui-ci écrase celui de la liste de prix. Le prix unitaire de la règle de prix est le prix unitaire final, donc aucune autre réduction supplémentaire ne doit lui être appliquée. Par conséquent, dans les transactions telles que les commandes client, les commandes fournisseur, etc., il sera récupéré dans le champ 'Prix unitaire', plutôt que dans le champ 'Tarif de la liste de prix'.",
 "If selected, the value specified or calculated in this component will not contribute to the earnings or deductions. However, it's value can be referenced by other components that can be added or deducted. ","Si cette option est sélectionnée, la valeur spécifiée ou calculée dans ce composant ne contribuera pas aux gains ou aux déductions. Cependant, sa valeur peut être référencée par d'autres composants qui peuvent être ajoutés ou déduits.",
 If subcontracted to a vendor,Si sous-traité à un fournisseur,
 "If the account is frozen, entries are allowed to restricted users.","Si le compte est gelé, les écritures ne sont autorisés que pour un nombre restreint d'utilisateurs.",
@@ -3361,7 +3361,7 @@ If subcontracted to a vendor,Si sous-traité à un fournisseur,
 "If two or more Pricing Rules are found based on the above conditions, Priority is applied. Priority is a number between 0 to 20 while default value is zero (blank). Higher number means it will take precedence if there are multiple Pricing Rules with same conditions.","Si deux règles de tarification ou plus sont trouvées sur la base des conditions ci-dessus, une priorité est appliquée. La priorité est un nombre compris entre 0 et 20 avec une valeur par défaut de zéro (vide). Les nombres les plus élévés sont prioritaires s'il y a plusieurs règles de tarification ayant les mêmes conditions.",
 "If unlimited expiry for the Loyalty Points, keep the Expiry Duration empty or 0.","Si vous souhaitez ne pas mettre de date d'expiration pour les points de fidélité, laissez la durée d'expiration vide ou mettez 0.",
 "If you have any questions, please get back to us.","Si vous avez des questions, veuillez revenir vers nous.",
-"If you have created a standard template in Sales Taxes and Charges Template, select one and click on the button below.","Si vous avez créé un modèle standard dans Modèle de Taxes et Frais de Vente, sélectionnez-en un et cliquez sur le bouton ci-dessous.",
+"If you have created a standard template in Sales Taxes and Charges Template, select one and click on the button below.","Si vous avez créé un modèle standard dans modèle de taxes et frais de vente, sélectionnez-en un et cliquez sur le bouton ci-dessous.",
 "If you {0} {1} quantities of the item <b>{2}</b>, the scheme <b>{3}</b>
 			will be applied on the item.","Si vous {0} {1} quantités de l'article <b>{2}</b>, le schéma <b>{3}</b>
 			 sera appliqué sur l'article.",
@@ -3762,8 +3762,8 @@ Item Supplier,Fournisseur de l'Article,
 Item Tax Amount Included in Value,Le montant des taxes liées à cet article est inclus dans son prix,
 Item Tax Rate,Taux de la Taxe sur l'Article,
 Item Tax Row {0} must have account of type Tax or Income or Expense or Chargeable,La Ligne de Taxe d'Article {0} doit indiquer un compte de type Taxes ou Produit ou Charge ou Facturable,
-Item Tax Template Detail,Détail du modèle de taxe d'article,
-Item Tax Template,Modèle de taxe d'article,
+Item Tax Template Detail,Détail du modèle de taxes d'article,
+Item Tax Template,Modèle de taxes d'article,
 Item Tax,Taxe sur l'Article,
 Item Template,Modèle d'article,
 Item To Manufacture,Article à produire,
@@ -4796,7 +4796,7 @@ On Converting Opportunity,A la conversion d'une opportunité,
 On Duty,Permanence,
 On Hold Since,En attente depuis le,
 On Hold,En attente,
-On Item Quantity,Sur les quantité de l'article,
+On Item Quantity,Sur les quantités d'article,
 On Leave,En Congé,
 On Net Total,Sur le Total Net,
 On Previous Row Amount,Le Montant de la Rangée Précédente,
@@ -5654,16 +5654,16 @@ Price or Product Discount,Remise sur le prix ou en produits,
 Price or product discount slabs are required,Le prix ou les règles de remises sont obligatoire,
 Price,Prix,
 Prices will not be shown if Price List is not set,Les Prix ne seront pas affichés si la Liste de prix n'est pas définie,
-Pricing Rule Brand,Marque de la règle de tarification,
-Pricing Rule Detail,Détail de la règle de tarification,context
+Pricing Rule Brand,Marque de la règle de prix,
+Pricing Rule Detail,Détail de la règle de prix,context
 Pricing Rule Detail,Détail de la règle de prix,
 Pricing Rule Help,Aide pour les règles de tarification,
-Pricing Rule Item Code,Code de l'article de la règle de tarification,
-Pricing Rule Item Group,Groupe d'article de la règle de tarification,
-"Pricing Rule is first selected based on 'Apply On' field, which can be Item, Item Group or Brand.","La règle de tarification est d'abord sélectionnée sur la base du champ ‘Appliquer sur’, qui peut être un article, un groupe d'articles ou une marque.",
-"Pricing Rule is made to overwrite Price List / define discount percentage, based on some criteria.","La règle de tarification permet de remplacer la liste de prix / définir un pourcentage de remise, sur la base de certains critères.",
-Pricing Rule {0} is updated,Règle de tarification {0} est mise à jour,
-Pricing Rule,Règle de tarification,
+Pricing Rule Item Code,Code de l'article de la règle de prix,
+Pricing Rule Item Group,Groupe d'article de la règle de prix,
+"Pricing Rule is first selected based on 'Apply On' field, which can be Item, Item Group or Brand.","La règle de prix est d'abord sélectionnée sur la base du champ ‘Appliquer sur’, qui peut être un article, un groupe d'articles ou une marque.",
+"Pricing Rule is made to overwrite Price List / define discount percentage, based on some criteria.","La règle de prix permet de remplacer la liste de prix / définir un pourcentage de remise, sur la base de certains critères.",
+Pricing Rule {0} is updated,règle de prix {0} est mise à jour,
+Pricing Rule,Règle de prix,
 Pricing Rules are further filtered based on quantity.,Les règles de tarification sont filtrées ensuite en fonction de la quantité.,
 Pricing Rules,Règles de tarification,context
 Pricing Rules,Règles de prix,
@@ -5863,7 +5863,7 @@ Purchase Order Items To Be Billed,Articles des commandes fournisseurs à facture
 Purchase Order Items To Be Received or Billed,Articles de commande fournisseur à recevoir ou facturer,
 Purchase Order Items To Be Received,Articles des commandes fournisseurs à recevoir,
 Purchase Order Items not received on time,Articles de commande d'achat non reçus à temps,
-Purchase Order Pricing Rule,Règle de tarification des commandes fournisseur,
+Purchase Order Pricing Rule,Règle de prix des commandes fournisseur,
 Purchase Order Required for Purchase Invoice & Receipt Creation,Commande fournisseur requise pour les factures d'achat et les création de reçus,
 Purchase Order Required,Commande fournisseur requis,context
 Purchase Order Required,Commande fournisseur Requis,
@@ -5894,8 +5894,8 @@ Purchase Receipt,Reçu d’Achat,
 Purchase Receipts,Reçus d'Achats,
 Purchase Register,Registre des achats,
 Purchase Return,Retour fournisseur,
-Purchase Tax Template,Modèle de Taxes pour les Achats,
-Purchase Taxes and Charges Template,Modèle de Taxe et Frais d'Achat,
+Purchase Tax Template,Modèle de taxes pour les achats,
+Purchase Taxes and Charges Template,Modèle de taxes et frais d'achat,
 Purchase Taxes and Charges,Taxes et Frais d’Achats,
 Purchase User,Acheteur,
 Purchase an Asset Item,Acheter un actif,
@@ -6677,9 +6677,9 @@ Sales Return,Retour de Ventes,
 Sales Settings,Paramètres des ventes,
 Sales Stage,Stade de vente,
 Sales Summary,Récapitulatif des ventes,
-Sales Tax Template,Modèle de la Taxe de Vente,
-Sales Taxes and Charges Template,Modèle de Taxes et Frais de Vente,
-Sales Taxes and Charges,Taxes et Frais de Vente,
+Sales Tax Template,Modèle de taxe à la vente,
+Sales Taxes and Charges Template,Modèle de taxes et frais de vente,
+Sales Taxes and Charges,Taxes et frais de vente,
 Sales Team Details,Détails de l'Équipe des Ventes,
 Sales Team1,Équipe des Ventes 1,
 Sales Team,Équipe des Ventes,
@@ -7679,10 +7679,10 @@ Tax Id: ,Numéro de TVA:,
 Tax Id,N° TVA,
 Tax Rate,Taux d'Imposition,
 Tax Rates,Taux de taxe,
-Tax Rule Conflicts with {0},Règle de Taxation est en Conflit avec {0},
-Tax Rule for transactions.,Règle de Taxation pour les transactions.,
-Tax Rule,Règle de Taxation,
-Tax Template is mandatory.,Un Modèle de Taxe est obligatoire.,
+Tax Rule Conflicts with {0},La règle de taxation est en conflit avec {0},
+Tax Rule for transactions.,La règle de taxation pour les transactions.,
+Tax Rule,Règle de taxation,
+Tax Template is mandatory.,Un modèle de taxes est obligatoire.,
 Tax Total,Total des taxes,
 Tax Type,Type de Taxe,
 Tax Withholding Account,Compte de taxation à la source,
@@ -7698,9 +7698,9 @@ Used for Taxes and Charges","La table de détails de taxe est récupérée depui
 Elle est utilisée pour les Taxes et Frais.",
 Tax on additional salary,Taxe sur le salaire additionnel,
 Tax on flexible benefit,Impôt sur les prestations sociales variables,
-Tax template for buying transactions.,Modèle de taxe pour les opérations d’achat.,
-Tax template for item tax rates.,Modèle de taxes pour les taux de taxes par article,
-Tax template for selling transactions.,Modèle de taxe pour les opérations de vente.,
+Tax template for buying transactions.,Modèle de taxes pour les opérations d’achat.,
+Tax template for item tax rates.,Modèle de taxes pour les prix unitaires par article,
+Tax template for selling transactions.,Modèle de taxes pour les opérations de vente.,
 Tax,Taxe,
 Taxable Amount,Montant Taxable,
 Taxable Salary Slab,Palier de salaire imposable,
@@ -8024,7 +8024,7 @@ To date needs to be before from date,La date de fin doit être avant la date de 
 "To know more about projected quantity, <a href=""https://erpnext.com/docs/user/manual/en/stock/projected-quantity"" style=""text-decoration: underline;"" target=""_blank"">click here</a>.","Pour en savoir plus sur les quantités projetés, <a href=""https://erpnext.com/docs/user/manual/en/stock/projected-quantity"" style=""text-decoration: underline;"" target=""_blank"">cliquez ici</a>.",
 To make Customer based incentive schemes.,Faire des programmes d'incitation basés sur le client.,
 "To merge, following properties must be same for both items","Pour fusionner, les propriétés suivantes doivent être les mêmes pour les deux articles",
-"To not apply Pricing Rule in a particular transaction, all applicable Pricing Rules should be disabled.","Pour ne pas appliquer la règle de tarification dans une transaction particulière, toutes les règles de tarification applicables doivent être désactivées en cochant la case 'Ignorer les règles de tarification'.",
+"To not apply Pricing Rule in a particular transaction, all applicable Pricing Rules should be disabled.","Pour ne pas appliquer la règle de prix dans une transaction particulière, toutes les règles de tarification applicables doivent être désactivées en cochant la case 'Ignorer les règles de tarification'.",
 "To set this Fiscal Year as Default, click on 'Set as Default'","Pour définir cet Exercice Fiscal par défaut, cliquez sur ""Définir par défaut""",
 "To still proceed with editing this Attribute Value, enable {0} in Item Variant Settings.","Pour éditer la valeur de cet attribut malgré tout, activez {0} dans les paramètres de variante d'article",
 To view logs of Loyalty Points assigned to a Customer.,Pour afficher les journaux des points de fidélité attribués à un client.,
@@ -8447,7 +8447,7 @@ User ID not set for Employee {0},ID de l'Utilisateur non défini pour l'Employé
 User ID,ID Utilisateur,
 User Remark,Remarques,
 User Resolution Time,Durée de résolution pour l'utilisateur,
-User has not applied rule on the invoice {0},L'utilisateur n'a pas appliqué de règle de tarification sur la facture {0},
+User has not applied rule on the invoice {0},L'utilisateur n'a pas appliqué de règle de prix sur la facture {0},
 User must always select,L'utilisateur doit toujours sélectionner,
 User {0} does not exist,Utilisateur {0} n'existe pas,
 User {0} doesn't have any default POS Profile. Check Default at Row {1} for this User.,L'utilisateur {0} n'a aucun profil POS par défaut. Vérifiez par défaut à la ligne {1} pour cet utilisateur.,
@@ -8497,7 +8497,7 @@ Valuation Rate is mandatory if Opening Stock entered,Le Taux de valorisation est
 Valuation Rate required for Item {0} at row {1},Le taux de valorisation est requis pour l'article {0} à la ligne {1},
 Valuation Rate,Taux de Valorisation,context
 Valuation Rate,Taux de valorisation,
-Valuation and Total,Valorisation et Total,
+Valuation and Total,Valorisation et total,
 "Valuation rate not found for the Item {0}, which is required to do accounting entries for {1} {2}. If the item is transacting as a zero valuation rate item in the {1}, please mention that in the {1} Item table. Otherwise, please create an incoming stock transaction for the item or mention valuation rate in the Item record, and then try submiting / cancelling this entry.","Taux de valorisation introuvable pour l'article {0}. Celui-ci est requis pour les écritures comptables de {1} {2}. Si l'article doit avoir un taux de valorisation égal à zéro pour la transaction {1}, veuillez l'indiquer dans la table d'articles {1}. Sinon, veuillez créer un écriture de stock pour l'article et indiquer un taux de valorisation dans les données de l'article, et essayez ensuite de soumettre/annuler cette écriture.",
 Valuation type charges can not marked as Inclusive,Frais de type valorisation ne peuvent pas être marqués comme inclus,
 Valuation,Valorisation,
@@ -9029,3 +9029,5 @@ woocommerce - {0},woocommerce - {0},
 {} of {},{} sur {},
 {} to Bill,{} à facturer,
 ← Back to upload files,← Retour au téléchargement de fichiers,
+Default,"Modèle par défaut","Sales Taxes and Charges Template"
+Default,"Modèle par défaut","Purchase Taxes and Charges Template"
