feat: Add tour for item booking

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -547,6 +547,7 @@ Allow user to edit Discount,Autoriser l'utilisateur à modifier la remise,
 Allow user to edit Price List Rate in transactions,Autoriser l'utilisateur à modifier la liste de prix dans les transactions,
 Allow user to edit Rate,Autoriser l'utilisateur à modifier le Taux,
 Allowed To Transact With,Autorisé à faire affaire avec,
+Allows you to link this item booking with a customer or a lead. Used to select the appropriate party.,Vous permet de lier cette réservation d'articles à un client ou un prospect. Permet de sélectionner le tiers approprié.,
 Already booked,Déjà réservé,
 Already record exists for the item {0},L'enregistrement existe déjà pour l'article {0},
 "Already set default in pos profile {0} for user {1}, kindly disabled default","Déjà défini par défaut dans le profil pdv {0} pour l'utilisateur {1}, veuillez désactiver la valeur par défaut",
@@ -658,7 +659,7 @@ Apply Rule On Brand,Appliquer cette règle sur une marque,
 Apply Rule On Item Code,Appliquer cette règle sur un code d'article,
 Apply Rule On Item Group,Appliquer cette règle sur un groupe d'article,
 Apply Rule On Other,Appliquer la règle sur un autre élément,
-Apply Tax Withholding Amount,Appliquer le montant de la retenue d'impôt,
+Apply Tax Withholding Amount,Activer la déduction de taxes à la source,
 Appointment Booking Settings,Paramètres de prise de rendez-vous,
 Appointment Booking Slots,Créneaux de réservations de rendez-vous,
 Appointment Booking,Réservation de rendez-vous,
@@ -1069,6 +1070,7 @@ Billing Interval Count cannot be less than 1,L'intervale de facturation ne peut 
 Billing Interval Count,Fréquence de facturation,
 Billing Interval,Intervalle de facturation,
 Billing Qty,Quantité facturée,
+Billing Quantity,Quantité facturée,
 Billing Rate,Taux de facturation,context
 Billing Rate,Taux de Facturation,
 Billing State,État de la Facturation,
@@ -1108,6 +1110,8 @@ Bonus Payment Date,Date de paiement du bonus,
 Book Appointment,Prendre un rendez-vous,
 Book Asset Depreciation Entry Automatically,Comptabiliser automatiquement les écritures d'immobilisation d'actifs,
 Booked Fixed Asset,Actif immobilisé comptabilisé,
+Booked slot end time.,Heure de fin du créneau réservé,
+Booked slot start time.,Heure de début du créneau réservé,
 Booked,Réservé,
 Booking Calendar,Calendrier de réservation,
 Bookings,Réservations,
@@ -1152,6 +1156,7 @@ Buying Rate,Prix d'achat,
 Buying Settings,Paramètres d'Achat,
 "Buying must be checked, if Applicable For is selected as {0}","Achat doit être vérifié, si Applicable Pour {0} est sélectionné",
 Buying,Achat,
+By default the color set in the item master data. Used to visualize the booking in your calendar.,Par défaut il s'agit de la couleur configurée dans les données de base de l'article. Permet de repérer visuellement la réservation dans votre calendrier.,
 "By default, the Item Name is set as per the Item Code entered. If you want Items to be named by a set Naming Series choose the 'Naming Series' option.","Par défaut le nom de l'article correspond au code de l'article. Si vous souhaitez que vos articles soient nommés sur la base d'un numéro de série, sélectionnez l'option 'Nom de série'",
 "By default, the customer name is set as per the full name entered. If you want customers to be named by a naming series choose the 'Naming Series' option.","Par défaut l'identifiant unique du client correspond au nom du client. Si vous souhaitez que vos clients soient identifiés sur la base d'un numéro de série, sélectionnez l'option 'Nom de série'.",
 "By default, the supplier unique identifier is set as per the supplier name entered. If you want suppliers to be named by a set Naming Series choose the 'Naming Series' option.","Par défaut l'identifiant unique du fournisseur correspond au nom du fournisseur. Si vous souhaitez que vos fournisseurs soient identifiés sur la base d'un numéro de série, sélectionnez l'option 'Nom de série'.",
@@ -1371,6 +1376,9 @@ Check if Asset requires Preventive Maintenance or Calibration,Vérifier si l'act
 Check if it is a hydroponic unit,Vérifiez s'il s'agit d'une unité hydroponique,
 Check if material transfer entry is not required,Vérifiez si une un transfert de matériel n'est pas requis,
 Check in (group),Enregistrement (groupe),
+Check this field and configure the repeat options if your event is a recurring event.,Cochez cette case et configurez les options de répétition si votre événement est récurrent.,
+Check this field if you want to synchronize your event with Google Calendar. Make sure your Google Calendar integration is setup and you have created at least one calendar.,Cochez cette case si vous souhaitez synchroniser vos événements avec Google Agenda. Assurez-vous que votre intégration Google Agenda est configurée et que vous avez créé au moins un calendrier de synchronisation.,
+Check this field if your event is an all day event.,Cochez cette case si votre événement dure toute la journée,
 Check this if you want to force the user to select a series before saving. There will be no default if you check this.,Cochez cette case si vous voulez forcer l'utilisateur à sélectionner une série avant de l'enregistrer. Il n'y aura pas de série par défaut si vous cochez cette case.,
 Check this if you want to show in website,Cochez cette case si vous souhaitez afficher sur le site,
 Check this to disallow fractions. (for Nos),Cochez cette case pour interdire les fractions. (Pour les numéros),
@@ -2858,8 +2866,8 @@ Fixed Assets,Actifs Immobilisés,
 Fixed Deposit Number,Numéro de dépôt fixe,
 Fixed Error Log,Journal des erreurs corrigées,
 Fixed rate,Prix unitaire fixe,
-Fixed,Fixé,
 Fixed,Fixe,Shipping Rule
+Fixed,Fixé,
 Fleet Management,Gestion des flottes,
 Fleet Manager,Gestionnaire de Flotte,
 Flexible Benefits,Avantages sociaux variables,
@@ -2921,6 +2929,7 @@ Fortnightly,Bimensuel,
 Forum Activity,Activité du forum,
 Forum Posts,Messages du forum,
 Forum URL,URL du forum,
+Fraction of Daily Salary for Half Day,Fraction du salaire quotidient pour une demi-journée,
 Free Item,Article gratuit,
 Free item code is not selected,Le code de l'article gratuit n'est pas sélectionné,
 Free item not set in the pricing rule {0},L'article gratuit n'est pas défini dans la règle de prix {0},
@@ -3784,6 +3793,7 @@ Item Wise Tax Detail ,Détails des taxes par article,
 Item Wise Tax Detail,Détail des Taxes par Article,context
 Item Wise Tax Detail,Détail des taxes par article,
 Item and Warranty Details,Détails de l'Article et de la Garantie,
+Item booked by the user. This item will also be used to invoice the customer.,Article réservé par l'utilisateur. Cet article sera également utilisé pour facturer le client.,
 Item has variants.,L'article a des variantes.,
 Item must be added using 'Get Items from Purchase Receipts' button,L'article doit être ajouté à l'aide du bouton 'Obtenir des éléments de Reçus d'Achat',
 Item name,Nom de l'article,
@@ -4516,6 +4526,7 @@ Name of Beneficiary,Nom du bénéficiaire,
 Name of Organizer,Nom de l'organisateur,
 Name of new Account. Note: Please don't create accounts for Customers and Suppliers,Nom du Nouveau Compte. Note: Veuillez ne pas créer de comptes Clients et Fournisseurs,
 Name of the Monthly Distribution,Nom de la Répartition Mensuelle,
+Name of the party linked to this booking. Used to create the quotation.,Nom du tiers lié à cette réservation. Permet de créer le devis.,
 Name or Email is mandatory,Nom ou Email est obligatoire,
 Name,Nom,
 Naming Series Prefix,Préfix du nom de série,
@@ -5083,6 +5094,7 @@ Party Type,Type de tiers,
 Party User,Utilisateur chez le tiers,
 Party can only be one of ,Le tiers ne peut être que,
 Party is mandatory,Le Tiers est obligatoire,
+Party name,Nom du tiers,
 Party type,Type de tiers,
 Party,Tiers,
 Passport Number,Numéro de Passeport,
@@ -7381,6 +7393,7 @@ State,État,
 Statistical Component,Composante Statistique,
 Status must be Cancelled or Completed,Le statut doit être 'Annulé' ou 'Terminé',
 Status must be one of {0},Le statut doit être l'un des {0},
+"Status of the booking. If the status is cancelled, the slot will remain available, else it will be considered as unavailable.","Statut de la réservation. Si le statut est annulé, le créneau est considéré comme disponible, sinon il est considéré comme indisponible.",
 Status,Statut,
 Statutory info and other general information about your Supplier,Informations légales et autres informations générales au sujet de votre Fournisseur,
 Stock Adjustment Account,Compte d'Ajustement du Stock,
@@ -7692,9 +7705,9 @@ Tax Total,Total des taxes,
 Tax Type,Type de Taxe,
 Tax Withholding Account,Compte de taxation à la source,
 Tax Withholding Category,Catégorie de taxation à la source,
-Tax Withholding Rate,Taux de retenue d'impôt,
-Tax Withholding Rates,Taux de retenue d'impôt,
-Tax Withholding rates to be applied on transactions.,Taux de retenue d'impôt à appliquer aux transactions.,
+Tax Withholding Rate,Taux de déduction de taxes,
+Tax Withholding Rates,Taux de déduction de taxes,
+Tax Withholding rates to be applied on transactions.,Taux de déduction de taxes à appliquer aux transactions.,
 Tax category,Catégorie de taxe,
 "Tax detail table fetched from item master as a string and stored in this field.
 Used for Taxes and Charges","Tableau de détail des taxes récupéré depuis les données de base et enregistré dans ce champ.
@@ -7896,6 +7909,7 @@ This document is over limit by {0} {1} for item {4}. Are you making another {3} 
 This document will be automatically deleted in {0} minutes if not validated.,Ce document sera automatiquement supprimé dans {0} minutes s'il n'est pas validé,
 This employee already has a log with the same timestamp.{0},Cet employé a déjà un journal avec le même horodatage. {0},
 This event will be processed after the {},Cet événement sera traité après le {},
+This field allows you to register notes linked to this booking. Users can also add notes when booking on the website.,Ce champ vous permet d'enregistrer des notes liées à cette réservation. Les utilisateurs peuvent également ajouter des notes lorsqu'ils réservent sur le site web,
 This invoice has already been fully paid,La facture a été entièrement payée,
 This is a location where final product stored.,Lieu où le produit final est stocké.,
 This is a location where operations are executed.,Lieu où les opérations sont exécutées.,
@@ -7932,6 +7946,8 @@ This subscription invoicing period starts on {0}.,La période de facturation de 
 This subscription will be cancelled on {0},Cet abonnement sera annulé le {0},
 This tool helps you to update or fix the quantity and valuation of stock in the system. It is typically used to synchronise the system values and what actually exists in your warehouses.,Cet outil vous permet de mettre à jour ou de corriger la quantité et l'évaluation de stock dans le système. Il est généralement utilisé pour synchroniser les valeurs du système et ce qui existe réellement dans vos entrepôts.,
 This type of event is not handled by dokos,Ce type d'événement n'est pas géré par dokos,
+This value will be used to create a quotation from an item booking. A new line will be added with this quantity.,Cette valeur sera utilisée pour créer un devis à partir d'une réservation d'articles. Une nouvelle ligne sera ajoutée avec cette quantité.,
+This value will be used to create a quotation from an item booking. This unit of measure will be used to fetch the appropriate price.,Cette valeur sera utilisée pour créer un devis à partir d'une réservation d'articles. Cette unité de mesure sera utilisée pour récupérer le prix approprié.,
 "This warehouse will be used to create Sale Orders. The fallback warehouse is ""Stores"".","Cet entrepôt est utilisé pour créer les commandes client. L'entrepôt par défaut est ""Magasins"".",
 "This warehouse will be used to create Sales Orders. The fallback warehouse is ""Stores"".","Cet entrepôt sera utilisé pour créer des commandes client. L'entrepôt par défaut est ""Magasin"".",
 "This will allow stock items to be displayed in negative values. Using this option depends on your use case. With this option unchecked, the system warns before obstructing a transaction that is causing negative stock.","Cela permettra d'afficher des valeurs de stock négatives. L'utilisation de cette option dépend de votre cas d'usage. Si cette option n'est pas cochée, le système émettra une alerte avec d'empêcher une transaction créant un stock négatif.",
@@ -8458,6 +8474,7 @@ User ID,ID Utilisateur,
 User Remark,Remarques,
 User Resolution Time,Durée de résolution pour l'utilisateur,
 User has not applied rule on the invoice {0},L'utilisateur n'a pas appliqué de règle de prix sur la facture {0},
+User linked with this booking.,Utilisateur lié avec cette réservation.,
 User must always select,L'utilisateur doit toujours sélectionner,
 User {0} does not exist,Utilisateur {0} n'existe pas,
 User {0} doesn't have any default POS Profile. Check Default at Row {1} for this User.,L'utilisateur {0} n'a aucun profil POS par défaut. Vérifiez par défaut à la ligne {1} pour cet utilisateur.,
